<resources>
    <string name="app_name">eVaccine</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="addbloodgroup">BloodGroup</string>
    <string name="addname">Name</string>
    <string name="addphone">Phone</string>
    <string name="addgender">Gender</string>
    <string name="addbutton">ADD</string>
    <string name="Status">Status</string>
    <string name="p_HPV">Some Cancers Warts</string>
    <string name="p_Tdpa">Diphther, Tetanus  Pertussis</string>
    <string name="p_Vec">Chicken pox</string>
    <string name="p_mmr">Measles,Mumps,Rubella</string>
    <string name="p_Typhoid">Typhoid,Fever, Diarrhea</string>
    <string name="p_Hepb">Hepatitis B</string>
    <string name="p_Polio">Polio</string>
    <string name="p_Dtp">Diphtheria,Tetanus</string>
    <string name="p_Hib">Bacteria Infection</string>
    <string name="p_PVC">Pneumonia</string>
    <string name="p_RV">Diarrhea</string>
    <string name="p_HepA">Liver disease</string>


</resources>
