<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_airline_seat_individual_suite_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_addchild"
            android:icon="@drawable/ic_child_care_black_24dp"
            android:title="Add Child" />


        <item
            android:id="@+id/nav_selectchild"
            android:icon="@drawable/ic_child_friendly_black_24dp"
            android:title="Select Child" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
